--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "shared/base.html" %}
-{% block title %}{{ block.super }}&nbsp;|&nbsp;Register{% endblock %}
-{% block nav_register %}class="active"{% endblock %}
+{% block title %}{{ block.super }}&nbsp;|&nbsp;Login{% endblock %}
+{% block nav_login %}class="active"{% endblock %}
 {% block content %}
 {% if messages %}
 <div class="alert alert-error alert-block">
@@ -13,11 +13,11 @@
 	</ul>
 </div>
 {% endif %}
-<form class="form-horizontal" action="{% url apps.auth.views.register %}" method="post">
+<form class="form-horizontal" action="{% url apps.auth.views.login %}" method="post">
 	{% csrf_token %}
 	{{ form.non_field_errors }}
 	<fieldset>
-		<legend>Sign up</legend>
+		<legend>Login</legend>
 		{% for field in form %}
 		{% if field.errors %}
 		<div class="control-group error">
