--- a/templates/games/index.html
+++ b/templates/games/index.html
@@ -12,17 +12,23 @@
 			<th>Release Date</th>
 			<th>Publisher</th>
 			<th>Developer</th>
+			{% if user.is_authenticated %}
+			<th></th>
+			{% endif %}
 		</tr>
 	</thead>
 	<tbody>
 {% for game in game_list %}
 		<tr>
-			<td><a href="{% url games.detail game.id %}">{{ game.title }}</a></td>
+			<td><a href="{% url games.details game.id %}">{{ game.title }}</a></td>
 			<td>{{ game.platform }}</td>
 			<td>{{ game.genre }}</td>
 			<td>{{ game.release_date }}</td>
 			<td>{{ game.publisher }}</td>
 			<td>{{ game.developer }}</td>
+			{% if user.is_authenticated %}
+			<td><a href="{% url apps.lists.views.add user.username game.id %}" class="icon-plus-sign"></a></td>
+			{% endif %}
 		</tr>
 {% endfor %}
 	</tbody>
