--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,6 +14,7 @@
 </div>
 {% endif %}
 <form class="form-horizontal" action="{% url apps.auth.views.login %}" method="post">
+	<input type="hidden" name="next" value="{{ next }}" />
 	{% csrf_token %}
 	{{ form.non_field_errors }}
 	<fieldset>
