--- a/templates/lists/details.html
+++ b/templates/lists/details.html
@@ -30,7 +30,9 @@
 			<td>{{ item.money_spent }}</td>
 			<td>{{ item.notes }}</td>
 			{% if user.is_authenticated and user.username == list.user.username %}
-			<td><a href="{% url apps.lists.views.remove user.username item.game.id %}" class="icon-minus-sign"></a></td>
+			<td>
+				<a href="{% url apps.lists.views.remove user.username item.game.id %}" class="icon-minus-sign"></a>
+				<a href="{% url apps.lists.views.edit user.username item.game.id %}" class="icon-edit"></a></td>
 			{% endif %}
 		</tr>
 		{% endfor %}
