add data initialization, add review model, minor template changes

--- a/templates/games/index.html
+++ b/templates/games/index.html
@@ -2,7 +2,9 @@
 {% block title %}{{ block.super }}&nbsp;|&nbsp;Games{% endblock %}
 {% block nav_games %}class="active"{% endblock %}
 {% block content %}
-<h1>Games</h1>
+<div class="page-header">
+	<h1>Games</h1>
+</div>
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
