--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,6 +1,8 @@
 {% extends "shared/base.html" %}
 {% block nav_home %}class="active"{% endblock %}
 {% block content %}
-<h1>Home</h1>
+<div class="page-header">
+	<h1>Home</h1>
+</div>
 <p>oajhdioas jdioasjdoja siodeasio</p>
 {% endblock %}
