--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -40,7 +40,7 @@
 		{% endfor %}
 		<div class="form-actions">
 			<button class="btn btn-primary" type="submit">Submit</button>
-			<button class="btn" type="button"><a href="{% url home.index %}">Cancel</a></button>
+			<a class="btn" href="{% url home.index %}">Cancel</a>
 		</div>
 	</fieldset>
 </form>
