add, edit, remove views and templates for reviews, reviews app, modify url routing

--- a/templates/games/details.html
+++ b/templates/games/details.html
@@ -1,7 +1,9 @@
 {% extends "shared/base.html" %}
 {% block title %}{{ block.super }}&nbsp;|&nbsp;{{ game.title }}{% endblock %}
 {% block content %}
-<h1>{{ game.title }}</h1>
+<div class="page-header">
+	<h1>{{ game.title }}</h1>
+</div>
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
