--- a/templates/reviews/index_for_user.html
+++ b/templates/reviews/index_for_user.html
@@ -1,9 +1,9 @@
 {% extends "shared/base.html" %}
-{% block title %}{{ block.super }}&nbsp;|&nbsp;Reviews{% endblock %}
+{% block title %}{{ block.super }}&nbsp;|&nbsp;My Reviews{% endblock %}
 {% block nav_reviews %}class="active"{% endblock %}
 {% block content %}
 <div class="page-header">
-	<h1>Reviews</h1>
+	<h1>My Reviews</h1>
 </div>
 <table class="table table-bordered table-striped">
 	<thead>
