--- a/templates/reviews/review_edit.html
+++ b/templates/reviews/review_edit.html
@@ -12,7 +12,7 @@
 	</ul>
 </div>
 {% endif %}
-<form class="form-horizontal" action="{% url apps.reviews.views.edit form.instance.id %}" method="post">
+<form class="form-horizontal" action="{% url reviews_review_update form.instance.id %}" method="post">
 	{% csrf_token %}
 	<fieldset>
 		<legend>Edit Review</legend>
@@ -36,7 +36,7 @@
 		{% endfor %}
 		<div class="form-actions">
 			<button type="submit" class="btn btn-primary">Save changes</button>
-			<a class="btn" href="{% url reviews.details form.instance.id %}">Cancel</a>
+			<a class="btn" href="{% url reviews_review_details form.instance.id %}">Cancel</a>
 		</div>
 	</fieldset>
 </form>
