--- a/templates/games/game_details.html
+++ b/templates/games/game_details.html
@@ -34,5 +34,5 @@
 		</tr>
 	</tbody>
 </table>
-<a href="{% url games.index %}">Back to list</a>
+<a href="{% url games_game_index %}">Back to list</a>
 {% endblock %}
