--- a/templates/lists/list_details.html
+++ b/templates/lists/list_details.html
@@ -26,15 +26,15 @@
 			<td>{{ item.game.title }}</td>
 			<td>{{ item.game.platform }}</td>
 			<td>{{ item.game.genre }}</td>
-			<td>{{ item.status }}</td>
+			<td>{{ item.get_status_display }}</td>
 			<td>{{ item.rating }}</td>
 			<td>{{ item.time_spent }}</td>
 			<td>{{ item.money_spent }}</td>
 			<td>{{ item.notes }}</td>
 			{% if user.is_authenticated and user.username == list.user.username %}
 			<td>
-				<a href="{% url apps.lists.views.remove user.username item.game.id %}" class="icon-minus-sign"></a>
-				<a href="{% url apps.lists.views.edit user.username item.game.id %}" class="icon-edit"></a></td>
+				<a href="{% url lists_listitem_delete user.username item.game.id %}" class="icon-minus-sign"></a>
+				<a href="{% url lists_listitem_update user.username item.game.id %}" class="icon-edit"></a></td>
 			{% endif %}
 		</tr>
 		{% endfor %}
