--- a/templates/lists/listitem_edit.html
+++ b/templates/lists/listitem_edit.html
@@ -12,7 +12,7 @@
 	</ul>
 </div>
 {% endif %}
-<form class="form-horizontal" action="{% url apps.lists.views.edit user.username form.instance.game.id %}" method="post">
+<form class="form-horizontal" action="{% url lists_listitem_update user.username form.instance.game.id %}" method="post">
 	{% csrf_token %}
 	<fieldset>
 		<legend>Edit {{ form.instance.game.title }} Entry</legend>
@@ -36,7 +36,7 @@
 		{% endfor %}
 		<div class="form-actions">
 			<button type="submit" class="btn btn-primary">Save changes</button>
-			<a class="btn" href="{% url apps.lists.views.details user.username %}">Cancel</a>
+			<a class="btn" href="{% url lists_list_details user.username %}">Cancel</a>
 		</div>
 	</fieldset>
 </form>
