--- a/templates/recs/userrec_details.html
+++ b/templates/recs/userrec_details.html
@@ -26,6 +26,10 @@
 			<th>Author</th>
 			<td>{{ userrec.author.username }}</td>
 		</tr>
+		<tr>
+			<th>Created</th>
+			<td>{{ userrec.date_created }}</td>
+		</tr>
 	</tbody>
 </table>
 <div class="well">
