--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -29,7 +29,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">My Profile</a></li>
+							<li><a href="{% url profiles_user_details user.username %}">My Profile</a></li>
 							<li><a href="{% url lists_list_details user.username %}">My List</a></li>
 							<li><a href="{% url reviews_review_index_for_user user.username %}">My Reviews</a></li>
 							<li><a href="{% url recs_userrec_index_for_user user.username %}">My Recommendations</a></li>
