--- a/templates/games/game_index.html
+++ b/templates/games/game_index.html
@@ -9,7 +9,7 @@
 	<thead>
 		<tr>
 			<th>Title</th>
-			<th>Platform</th>
+			<th>Platforms</th>
 			<th>Genre</th>
 			<th>Release Date</th>
 			<th>Publisher</th>
@@ -23,7 +23,7 @@
 {% for game in game_list %}
 		<tr>
 			<td><a href="{% url games_game_details game.id %}">{{ game.title }}</a></td>
-			<td>{{ game.platform }}</td>
+			<td>{{ game.get_platforms }}</td>
 			<td>{{ game.genre }}</td>
 			<td>{{ game.release_date }}</td>
 			<td>{{ game.publisher }}</td>
