--- a/templates/recs/userrec_details.html
+++ b/templates/recs/userrec_details.html
@@ -28,7 +28,7 @@
 		</tr>
 		<tr>
 			<th>Created</th>
-			<td>{{ userrec.date_created }}</td>
+			<td>{{ userrec.date_created|date:"F j, Y, H:i" }}</td>
 		</tr>
 	</tbody>
 </table>
