--- a/templates/reviews/review_details.html
+++ b/templates/reviews/review_details.html
@@ -24,7 +24,7 @@
 		</tr>
 		<tr>
 			<th>Created</th>
-			<td>{{ review.date_created }}</td>
+			<td>{{ review.date_created|date:"F j, Y, H:i" }}</td>
 		</tr>
 		<tr>
 			<th>Rating</th>
