--- a/templates/profiles/userrec_index_for_user.html
+++ b/templates/profiles/userrec_index_for_user.html
@@ -1,8 +1,8 @@
 {% extends "shared/base.html" %}
-{% block title %}{{ block.super }}&nbsp;|&nbsp;My Recommendations{% endblock %}
+{% block title %}{{ block.super }}&nbsp;|&nbsp;{{ user.username }}'s Recommendations{% endblock %}
 {% block content %}
 <div class="page-header">
-	<h1>My Recommendations</h1>
+	<h1>{{ user.username }}'s Recommendations</h1>
 </div>
 <table class="table table-bordered table-striped">
 	<thead>
@@ -18,9 +18,9 @@
 {% for rec in userrec_list %}
 		<tr>
 			<td><a class="icon-info-sign" href="{% url recs_userrec_details rec.id %}"></a></td>
-			<td>{{ rec.game1.title }}</a></td>
-			<td>{{ rec.game2.title }}</a></td>
-			<td>{{ rec.author.username }}</a></td>
+			<td><a href="{% url games_game_details rec.game1.id %}">{{ rec.game1.title }}<a/></a></td>
+			<td><a href="{% url games_game_details rec.game2.id %}">{{ rec.game2.title }}<a/></a></td>
+			<td><a href="{% url profiles_user_details rec.author.username %}">{{ rec.author.username }}</a></td>
 			<td>{{ rec.content|truncatechars:10 }}</td>
 		</tr>
 {% endfor %}
