--- a/templates/games/game_details.html
+++ b/templates/games/game_details.html
@@ -4,40 +4,71 @@
 <div class="page-header">
 	<h1>{{ game.title }}</h1>
 </div>
-<table class="table table-bordered table-striped">
-	<thead>
-		<tr>
-			<th>Title</th>
-			<td>{{ game.title }}</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<th>Platforms</th>
-			<td>{{ game.get_platforms }}</td>
-		</tr>
-		<tr>
-			<th>Genre</th>
-			<td>{{ game.genre }}</td>
-		</tr>
-		<tr>
-			<th>Release date</th>
-			<td>{{ game.release_date }}</td>
-		</tr>
-		<tr>
-			<th>Publisher</th>
-			<td>{{ game.publisher }}</td>
-		</tr>
-		<tr>
-			<th>Developer</th>
-			<td>{{ game.developer }}</td>
-		</tr>
-		<tr>
-			<th>Tags</th>
-			<td>{{ game.get_tags }}</td>
-		</tr>
-	</tbody>
-</table>
+<div class="row">
+	<div class="span3">
+		<a href="{{ game.boxart_url }}" class="thumbnail">
+			<img src="{{ game.boxart_url }}"></img>
+		</a>
+	</div>
+	<div class="span9">
+		<table class="table table-bordered table-striped">
+			<thead>
+				<tr>
+					<th>Title</th>
+					<td>{{ game.title }}</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>Platforms</th>
+					<td>{{ game.get_platforms }}</td>
+				</tr>
+				<tr>
+					<th>Genre</th>
+					<td>{{ game.genre }}</td>
+				</tr>
+				<tr>
+					<th>Release date</th>
+					<td>{{ game.release_date }}</td>
+				</tr>
+				<tr>
+					<th>Publisher</th>
+					<td><a href="{% url games_company_details game.publisher.id %}">{{ game.publisher }}</a></td>
+				</tr>
+				<tr>
+					<th>Developer</th>
+					<td><a href="{% url games_company_details game.developer.id %}">{{ game.developer }}</a></td>
+				</tr>
+				<tr>
+					<th>Tags</th>
+					<td>{{ game.get_tags }}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+</br>
+<div class="row">
+	<div class="span12">
+		{% if game.screenshot_set.all %}
+		<h2>Screenshots</h2>
+		</br>
+		<div id="myCarousel" class="carousel slide">
+			<div class="carousel-inner">
+				{% for scr in game.screenshot_set.all %}
+				{% if forloop.counter == 1 %}
+				<div class="active item"><img src="{{ scr.url }}"></img></div>
+				{% else %}
+				<div class="item"><img src="{{ scr.url }}"></img></div>
+				{% endif %}
+				{% endfor %}
+			</div>
+			<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+			<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+		</div>
+		{% endif %}
+	</div>
+</div>
 <div class="row">
 	<div class="span6">
 		<h2>Reviews</h2><br />
