--- a/templates/profiles/user_details.html
+++ b/templates/profiles/user_details.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="span5">
-		<table class="table table-bordered table-striped">
+		<table class="table">
 			<thead>
 				<tr>
 					<th style="width:125px;">Username</th>
@@ -58,11 +58,8 @@
 			</tbody>
 		</table>
 	</div>
-</div>
-<div class="row">
-	<div class="span5 offset2">
-		<h3>Statistics</h3>
-		<table class="table table-bordered table-striped">
+	<div class="span5">
+		<table class="table">
 			<thead>
 				<tr>
 					<th style="width:125px;">Reviews</th>
@@ -78,6 +75,7 @@
 		</table>
 	</div>
 </div>
+</br>
 <div class="row">
 	<div class="span6">
 		<h3>Latest reviews</h3></br>
