--- a/templates/games/company_index.html
+++ b/templates/games/company_index.html
@@ -18,7 +18,7 @@
 		<tr>
 			<td><a href="{% url games_company_details company.id %}">{{ company.name }}</a></td>
 			<td>{{ company.website|urlize }}</td>
-			<td>{{ company.games_released }}</td>
+			<td>{{ company.number_of_games_released }}</td>
 		</tr>
 {% endfor %}
 	</tbody>
