--- a/templates/games/game_details.html
+++ b/templates/games/game_details.html
@@ -43,6 +43,10 @@
 					<th>Tags</th>
 					<td>{{ game.get_tags }}</td>
 				</tr>
+				<tr>
+					<th>User Rating</th>
+					<td>{{ game.get_user_rating|floatformat:1 }}</td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
@@ -57,9 +61,9 @@
 			<div class="carousel-inner">
 				{% for scr in game.screenshot_set.all %}
 				{% if forloop.counter == 1 %}
-				<div class="active item"><img src="{{ scr.url }}"></img></div>
+				<div class="active item"><img src="{{ scr.url }}" style="height:529px;margin:auto;"></img></div>
 				{% else %}
-				<div class="item"><img src="{{ scr.url }}"></img></div>
+				<div class="item"><img src="{{ scr.url }}" style="height:529px;margin:auto;"></img></div>
 				{% endif %}
 				{% endfor %}
 			</div>
