--- a/templates/profiles/user_details.html
+++ b/templates/profiles/user_details.html
@@ -78,15 +78,17 @@
 </br>
 <div class="row">
 	<div class="span6">
-		<h3>Latest reviews</h3></br>
+		<h2>Reviews</h2><br />
 		{% if reviews %}
 		{% for review in reviews %}
 		<div class="span5 well">
-			<h4>{{ review.author.username}}
-				<small>on {{ review.date_created }}</small>
-			</h4>
-			<i>Rating: {{ review.rating }}</i></br>
-			<i><a style="color:#333;"href="{% url reviews_review_details review.id %}">{{ review.content|truncatechars:300}}</a></i>
+			<p>
+				<h4><a href="{% url profiles_user_details review.author.username %}">{{ review.author.username}}</a>
+					<small>on {{ review.date_created }}</small>
+				</h4>
+				Rating: {{ review.rating }}
+			</p>
+			<a style="color:#333;"href="{% url reviews_review_details review.id %}">{{ review.content|truncatechars:300}}</a>
 		</div>
 		{% endfor %}
 		{% else %}
@@ -94,16 +96,20 @@
 		{% endif %}
 	</div>
 	<div class="span6">
-		<h3>Latest recommendations</h3></br>
+		<h2>Recommendations</h2><br />
 		{% if userrecs %}
 		{% for userrec in userrecs %}
 		<div class="span5 well">
 			<p>
-			<strong>If you liked</strong> {{ userrec.game1 }}<br />
-			<strong>You might like</strong> {{ userrec.game2 }}
+				<strong>If you liked</strong> <a href="{% url games_game_details userrec.game1.id %}">{{ userrec.game1.title }}</a><br />
+				<strong>You might like</strong> <a href="{% url games_game_details userrec.game2.id %}">{{ userrec.game2.title }}</a>
 			</p>
-			<a style="color:#333;" href="{% url recs_userrec_details userrec.id %}">{{ userrec.content|truncatechars:300 }}</a>
-			<h5><small>by {{ userrec.author }}</small></h5>
+			<p>
+				<a style="color:#333;" href="{% url recs_userrec_details userrec.id %}">{{ userrec.content|truncatechars:300 }}</a>
+			</p>
+			<h5>
+				<small>by <a href="{% url profiles_user_details userrec.author.username %}">{{ userrec.author.username }}</a></small>
+			</h5>
 		</div>
 		{% endfor %}
 		{% else %}
